# lvs-dpdk

./: LICENSE  README.md  build-all.sh
ipvs/: .ofp_vs.h.swp  Makefile.am  ip_vs.h  kern_list.h  main.c  ofp.conf  ofp_vs.h  ofp_vs_conn.c  ofp_vs_core.c  ofp_vs_ctl.c  ofp_vs_kern_compat.h  ofp_vs_proto.c  ofp_vs_proto_tcp.c  ofp_vs_xmit.c  start.sh
ipvs/.deps/: ipvs-ofp_vs_core.Po  ipvs-ofp_vs_ctl.Po
ipvs/include/: .kern_list.h.swp  .ofp_vs_kern_compat.h.swp  ofp_vs.h  ofp_vs_kern_compat.h  ofp_vs_tcpip.h
ipvs/include/linux/: .ip_vs.h.swp  ip_vs.h
ipvs/include/net/: ip_vs.h
ipvs/test/: msgsent.c
ipvsadm/: Makefile  ipvsadm.8  ipvsadm.c
ipvsadm/libipvs/: libipvs.c
ofp_vs/: Makefile.am  README.md  main.c  ofp.conf  ofp_vs_conn.c  ofp_vs_core.c  ofp_vs_ctl.c  ofp_vs_proto.c  ofp_vs_proto_tcp.c  ofp_vs_stats.c  ofp_vs_timer.c  ofp_vs_xmit.c
ofp_vs/include/: ofp_vs.h  ofp_vs_kern_compat.h
ofp_vs/include/net/: ip_vs.h
ofp_vs/test/: Makefile  msgsent.c
tools/ipvsadm/: Makefile  ipvsadm.c
tools/keepalived/: Makefile  config.status  configure  configure.in  configure.sh
tools/keepalived/autom4te.cache/: output.0  requests  traces.0
tools/keepalived/genhash/: Makefile
tools/keepalived/keepalived/: Makefile
tools/keepalived/keepalived/check/: Makefile
tools/keepalived/keepalived/core/: Makefile
tools/keepalived/keepalived/include/: config.h
tools/keepalived/keepalived/libipvs-2.6/: .libipvs.c.swp  Makefile  libipvs.c
tools/keepalived/keepalived/vrrp/: Makefile
tools/keepalived/lib/: Makefile
